css/style.css
/* ... */
header.site-header .site-navigation-bar {
  position: relative;
  height: 100px;
  min-height: 100px;
  z-index: 2;
}

header.site-header .site-navigation-bar .logo img {
  display: block;
  float: left;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu {
  position: relative;
  display: block;
  float: right;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li {
  float: left;
  margin-right: 30px;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li:last-child {
  margin-right: 0;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item a {
  color: #21c2f8;
  position: relative;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item a:before {
  content: '';
  display: block;
  position: absolute;
  width: 50%;
  height: 1px;
  left: 50%;
  bottom: -10px;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
  background-color: #21c2f8;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a {
  display: block;
  color: #fff;
  padding: 10px 0;
}

header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a:hover, header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a:active {
  color: #21c2f8;
}

header.site-header .header-banner {
  height: -webkit-calc(100vh - 250px);
  height: calc(100vh - 250px);
  max-height: -webkit-calc(1080px - 250px);
  max-height: calc(1080px - 250px);
  z-index: 2;
  color: #fff;
}

header.site-header .header-banner .heading-content {
  width: 100%;
  text-transform: uppercase;
}

header.site-header .header-banner .heading-content .heading-title hr.small {
  margin-top: 40px;
  margin-bottom: 40px;
}

header.site-header .header-banner .heading-content .buttons-header {
  margin-top: 40px;
}

header.site-header .header-banner .heading-content .buttons-header .button-cta {
  width: 100%;
}

header.site-header .arrow-down-section {
  position: absolute;
  width: 100%;
  height: 150px;
  bottom: 0;
  z-index: 3;
}

header.site-header .arrow-down-section .arrow-down {
  display: block;
  position: relative;
  font-size: 4rem;
  line-height: 4rem;
  color: #fff;
  width: 64px;
  height: 64px;
}

header.site-header .arrow-down-section .arrow-down:before, header.site-header .arrow-down-section .arrow-down:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
          transform: rotate(45deg);
}

header.site-header .arrow-down-section .arrow-down:before {
  border: 1px solid #21c2f8;
  -webkit-animation: sera-pulse 2.5s ease-in-out infinite alternate;
          animation: sera-pulse 2.5s ease-in-out infinite alternate;
}

header.site-header .arrow-down-section .arrow-down:after {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  background-color: rgba(255, 255, 255, 0.2);
}

header.site-header .arrow-down-section .arrow-down:hover i {
  -webkit-transform: scale(1.3);
      -ms-transform: scale(1.3);
          transform: scale(1.3);
}

header.site-header .arrow-down-section .arrow-down:hover:after {
  background-color: rgba(255, 255, 255, 0.3);
}

header.site-header .arrow-down-section .arrow-down i {
  width: 100%;
  height: 100%;
  text-align: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
}

header.site-header .arrow-down-section .arrow-down i:before {
  width: 100%;
  height: 100%;
}

/**
 *
 *  Responsive Header Style + Navigation Mobile Menu
 *
 *  @package gleesik_layout
 *
 **/
.toggle-menu {
  display: none;
}
/* ... */

